--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 DATABASE_URL="file:./dev.db"
 NEXT_PUBLIC_MINIMUM_DONATION=0.01
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-secret-key-at-least-32-chars"
+SMTP_HOST="smtp.example.com"
+SMTP_PORT="587"
+SMTP_USER="your-smtp-username"
+SMTP_PASSWORD="your-smtp-password"
+SMTP_FROM="noreply@example.com"
+SMTP_SECURE="false"
