added complete auth and major changes implemented

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ SMTP_USER="your-smtp-username"
 SMTP_PASSWORD="your-smtp-password"
 SMTP_FROM="noreply@example.com"
 SMTP_SECURE="false"
+PROJECT_ID="sb1-cmg7lr"
